# jar-verifier

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: 11.classinfo  17.classinfo  21.classinfo  25.classinfo
src/: args.rs  error.rs  main.rs
src/checking/reference_checker/: Cargo.toml
src/checking/reference_checker/src/: error.rs  lib.rs
src/parsing/: Cargo.toml
src/parsing/import_checker/: Cargo.toml
src/parsing/import_checker/src/: lib.rs
src/parsing/java_class/: Cargo.toml
src/parsing/java_class/src/: classinfo.rs  error.rs  java_class.rs  lib.rs
src/parsing/reference_checker/: Cargo.toml
src/parsing/reference_checker/src/: lib.rs
testdata/: requirements.txt  requirements_17.txt  requirements_21.txt  requirements_25.txt
tools/jdk_class_reader/: settings.gradle.kts
tools/jdk_class_reader/app/: build.gradle.kts
tools/jdk_class_reader/app/src/main/java/app/classreader/: JdkClassReader.java
tools/jdk_class_reader/app/src/main/java/com/exedio/: App.java  JdkClassReader.java
tools/jdk_class_reader/app/src/test/java/com/exedio/: AppTest.java
tools/test_jar/: settings.gradle.kts
tools/test_jar/lib/: build.gradle.kts
tools/test_jar/lib/src/main/java/org/example/: LibraryWithDependencies.java  LibraryWithoutDependencies.java
tools/test_jar/lib/src/test/java/org/example/: LibraryWithDependenciesTest.java  LibraryWithoutDependenciesTest.java
