[package]
name = "jar_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_class = { path = "./src/parsing/java_class/" }
reference_checker = { path = "./src/checking/reference_checker/" }
binrw = "0.14.1"
env_logger = "0.11.6"
log = "0.4.26"
clap = { version = "4.5.31", features = ["derive"] }
rayon = "1.10.0"

[workspace]
resolver = "2"
members = ["src/parsing/java_class", "src/checking/reference_checker"]
