[package]
name = "jar_verifier"
version = "0.3.3"
edition = "2024"
description = "Verifies JAR dependencies by checking their imported classes and used methods"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_class = { path = "./src/parsing/java_class/" }
reference_checker = { path = "./src/checking/reference_checker/" }
binrw = "0.15.0"
env_logger = "0.11.6"
log = { version = "0.4.26", features = ["release_max_level_debug"] }
clap = { version = "4.5.31", features = ["derive"] }
rayon = "1.10.0"

[workspace]
resolver = "2"
members = ["src/parsing/java_class", "src/checking/reference_checker"]

[features]
embedded_classinfo = []

[profile.release]
lto = true
strip = true
