[package]
name = "reference_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_class = { path = "../../parsing/java_class/" }
regex = "1.11.1"
once_cell = "1.20.3"
binrw = "0.14.1"
rayon = "1.10.0"
