[package]
name = "reference_checker"
version = "0.3.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_class = { path = "../../parsing/java_class/" }
binrw = "0.15.0"
rayon = "1.10.0"
log = "0.4.26"
ahash = "0.8.12"
