[package]
name = "java_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.14.1"
modular-bitfield-msb = "0.11.2"
shellexpand = "3.1.0"
glob = "0.3.2"
zip = { version = "2.2.2", default-features = false, features = [
  "bzip2",
  "deflate",
  "deflate64",
  "lzma",
  "zstd",
] }
log = "0.4.26"
rayon = "1.10.0"
