[package]
name = "java_class"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.15.0"
modular-bitfield-msb = "0.11.2"
shellexpand = "3.1.0"
glob = "0.3.2"
zip = { version = "4.3.0", default-features = false, features = [
  "bzip2",
  "deflate",
  "deflate64",
  "lzma",
  "zstd",
] }
log = "0.4.26"
rayon = "1.10.0"
nom = "8.0.0"
