[package]
name = "reference_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_class = { path = "../java_class/" }
regex = "1.11.1"
zip = "2.2.2"
once_cell = "1.20.3"
shellexpand = "3.1.0"
glob = "0.3.2"
